fixed HTML spacing errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,5 +85,5 @@ body{
 .links{
   float: left;
   padding: 5px;
-  padding-top: 20px;
+  padding-top: 125px;
 }
